--- a/zomat.css
+++ b/zomat.css
@@ -107,7 +107,7 @@ body {
 
 .food__image {
   width: 100%;
-  height: 200px;
+  max-height: 200px; /* Set maximum height for the image */
   object-fit: cover;
 }
 
